# ray-tracing-gpu-vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile-shaders.bat
shaders/: shader.comp  shader.rchit  shader.rgen  shader.rint  shader.rmiss  shader_path.hpp
src/: main.cpp  render_call_info.h  scene.cpp  vulkan.cpp  vulkan.h
